fixed collapsing footer divs

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -241,3 +241,7 @@ tr {
   width: 33%;
   float: right;
 }
+
+#footer-wrapper-div {
+  clear: both;
+}
